src/app/account/account.component.scss
#linked-accounts
{
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(min(200px, 100%), 1fr));
    gap: 15px;

    .linked-account
    {
        text-decoration: none;
        color: var(--secondary-color);
        background-color: var(--primary-color);
        padding: 5px;
        border-radius: 5px;

        img
        {
            width: 100%;
            border-radius: 5px;
        }

        p
        {
            margin: 0;
        }
    }
}

